test/for/continue_invalid.lox
continue; // error: cannot use continue outside of a loop